--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "ws": "^7.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
