--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "history": "^4.10.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
