--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.5",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
     "history": "^4.10.1",
+    "jwk-to-pem": "^2.0.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-icons": "^3.9.0",
