--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
+    "simple-peer": "^9.7.0",
     "ws": "^7.2.3"
   },
   "scripts": {
