--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-forge": "^0.9.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-draggable": "^4.3.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
