--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jwk-to-pem": "^2.0.3",
     "node-forge": "^0.9.1",
     "react": "^16.11.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.11.0",
     "react-draggable": "^4.3.1",
     "react-icons": "^3.9.0",
